tests/paczka1/fuzzy1/52351211.err
Error in line 4: tBHj43 S188 75,2
Error in line 3: Iko S143 45,9
Error in line 25: Iko S143 56,9
Error in line 26: O90rY9s A800 92,1
Error in line 27: Iko S24 16,4
